--- a/protos/express-proto/views/pages/alpha_gallery.ejs
+++ b/protos/express-proto/views/pages/alpha_gallery.ejs
@@ -3,167 +3,64 @@
 <!-- Javascript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
+   // Sets the action of the form after submission.
+   function update_action() {
+      document.getElementById("create-button").action = "/download";
+   }
+
 	function add_img(img_url) {
+      $("#create-button").css("display", "inline-block");
 		new_img = new Image();
-        new_img.classList.add("nft-img");
-        new_img.src = img_url;
-        document.getElementById("photo-list").appendChild(new_img);
+      new_img.classList.add("nft-img");
+      new_img.src = img_url;
+      document.getElementById("photo-list").appendChild(new_img);
 	}
 
-    $(document).ready(function() {
-        let i = 0;
-        $("button").click(function() {
-            const imageDirectory = "";
-            // const images = ["alligator.png", "bat.png", "cat.png", "dog.png"];
-            const images = ["https://ipfs.io/ipfs/QmXiDcEu27TeBo2seYDuy81xtKmeYk3QUtjinNEnhpgReU",
-					        "https://ipfs.io/ipfs/QmXiDcEu27TeBo2seYDuy81xtKmeYk3QUtjinNEnhpgReU",
-					        "https://ipfs.io/ipfs/QmXiDcEu27TeBo2seYDuy81xtKmeYk3QUtjinNEnhpgReU",
-					        "https://ipfs.io/ipfs/QmXiDcEu27TeBo2seYDuy81xtKmeYk3QUtjinNEnhpgReU"]
+   function setup() { }
 
-            for (let img_url of images) {
-                let img = new Image();
-                img.classList.add("nft-img");
-                idString = i.toString();
-                img.setAttribute("id", idString);
-                img.addEventListener("click", e => add_img(img_url));
-                i += 1;
-                img.src = img_url;
-                document.getElementById("image-container").appendChild(img);
-            }
-        });
-    });
+   $(document).ready(setup);
 </script>
 
 <!-- CSS -->
-<style>
-:root {
-    --selector-width: 30%;
-    --buffer-width: 5px;
-    --width: 1248px;
-    --height: 1690px;
-    --scaling-factor: 0.1;
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    max-height: 100vh;
-    background-color: #eeeeee;
-}
-
-h1 {
-    color: white;
-    font-family: Helvetica;
-    font-size: 26px;
-}
-
-.button {
-  background-color: #4CAF50; /* green */
-  border: none;
-  border-radius: 4px;
-  color: white;
-  padding: 12px 25px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-}
-
-.nft-img {
-	height: calc(var(--height) * var(--scaling-factor));
-	width: calc(var(--width) * var(--scaling-factor));
-    margin: 10px;
-    border-radius: 5px;
-    transition: .95s ease;
-}
-
-img:hover {
-    opacity: 0.6;
-}
-
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: black;
-    border-radius: 10px;
-}
- 
-::-webkit-scrollbar-thumb {
-    background: white;
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #dddddd; 
-}
-
-#selector {
-    position: fixed;
-    float: left;
-    overflow-y: auto;
-
-    height: 100%;
-    width: var(--selector-width);
-    
-    background: black;
-}
-
-#scrollbar-buffer {
-    position: fixed;
-    left: var(--selector-width);
-    width: var(--buffer-width);
-    height: 100%;
-    background-color: black;
-}
-
-#gallery-container {
-    position: fixed;
-    left: calc(var(--selector-width) + var(--buffer-width));
-    width: calc(100% - var(--selector-width) - var(--buffer-width));
-    height: 100%;
-    display: table;
-}
-
-#gallery {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+<%- include("../partials/css_style") %>
 
 <!-- HTML -->
 <body>
-<div>
-<div id="selector">
-
-<center>
-<br>
-<h1 id="header">Account: <%= name %></h1>
-<br>
-<button class="button">
-    Load More
-</button>
-
-<br>
-<br>
-<br>
-
-<div id="image-container">
-	<% for (let i = 0; i < searchRes.nftList.length; i++) { %>
-		<img class="nft-img" id="<%= i %>" src="<%= searchRes.nftList[i].img_url %>" onclick="add_img('<%= searchRes.nftList[i].img_url %>')">
-	<% } %>
-</div>
-</center>
-
-</div>
-
-<div id="scrollbar-buffer">
-</div>
-
-<div id="gallery-container">
-    <center id="gallery">
-    <div id="photo-list"></div>
-    </center>
+<div class="container-fluid">
+   <div class="row">
+      <!-- Sidebar -->
+      <div class="col-3 px-1 bg-dark position-fixed" id="sticky-sidebar">
+         <ul class="list-group bg-dark">
+            <li class="list-group-item bg-dark border-0">
+               <center>
+                  <h1 id="header">Account: <%= name %></h1>
+                  <hr>
+               </center>
+            </li>
+            <!-- Image List -->
+            <li class="list-group-item bg-dark border-0" id="image-container">
+                  <center>
+                     <% for (let i = 0; i < searchRes.nftList.length; i++) { %>
+                        <img class="selection-img"
+                             id="<%= i %>"
+                             src="<%= searchRes.nftList[i].getImgUrl() %>"
+                             onclick="add_img('<%= searchRes.nftList[i].getImgUrl() %>')">
+                     <% } %>
+                  </center>
+            </li>
+         </ul>
+      </div>
+      <!-- Gallery -->
+      <div id="gallery-container" class="col offset-3">
+         <center id="gallery">
+            <div id="photo-list"></div>
+            <br>
+            <form id="create-button" style="display: none;" onsubmit="update_action()" method="get">
+               <input type="submit" class="button" value="Create Gallery">
+            </form>
+         </center>
+      </div>
+   </div>
 </div>
 </body>
