--- a/protos/express-proto/views/partials/header.ejs
+++ b/protos/express-proto/views/partials/header.ejs
@@ -1,11 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">EJS Is Fun</a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
-    </li>
-  </ul>
+<nav class="navbar navbar-dark bg-dark rounded">
+   <h1 class="navbar-brand">Gallery Creator</h1>
 </nav>
