--- a/flask/frontend/partials/css_style.html
+++ b/flask/frontend/partials/css_style.html
@@ -52,14 +52,23 @@ hr {
 #gallery-container {
    height: 100vh;
    display: table;
+   background-image: url('https://wallpapercave.com/wp/wp2742875.jpg');
 }
 
 #gallery {
+   background-image: url('https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size: 80vh;
    display: table-cell;
    vertical-align: middle;
+   
+
 }
 
+
 .button {
+   
    background-color: #222222; /* black */
    border: none;
    border-radius: 4px;
