--- a/frontend/partials/css_style.html
+++ b/frontend/partials/css_style.html
@@ -39,9 +39,19 @@ hr {
 
 #image-container { overflow: auto; }
 
-.nft-img, .selection-img {
-   height: calc(var(--height) * var(--scaling-factor));
-   width: calc(var(--width) * var(--scaling-factor));
+.selection-img {
+   max-height: calc(var(--height) * var(--scaling-factor));
+   max-width: calc(var(--width) * var(--scaling-factor));
+   margin: 10px;
+   border-radius: 5px;
+   transition: .95s ease;
+}
+
+.nft-img {
+   max-height: calc(var(--height) * var(--scaling-factor));
+   max-width: calc(var(--width) * var(--scaling-factor));
+   height: auto;
+   width: auto;
    margin: 10px;
    border-radius: 5px;
    transition: .95s ease;
@@ -51,6 +61,7 @@ hr {
 
 #gallery-container {
    height: 100vh;
+   width:100vh;
    display: table;
    background-image: url('https://wallpapercave.com/wp/wp2742875.jpg');
 }
@@ -59,10 +70,10 @@ hr {
    background-image: url('https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500');
    background-repeat: no-repeat;
    background-position: center;
+   
    background-size: 80vh;
    display: table-cell;
    vertical-align: middle;
-   
 
 }
 
@@ -75,7 +86,7 @@ hr {
    color: white;
    padding: 12px 25px;
    text-align: center;
-   display: inline-block;
+   display: table-cell;
    font-size: 16px;
 }
 </style>
