Clean up front-end style
Front-end landing pages should look more professional now.

--- a/templates/alpha_gallery.html
+++ b/templates/alpha_gallery.html
@@ -73,7 +73,7 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-{% include "frontend/partials/css_style.html" %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/gallery_style.css') }}">
 
 <!-- HTML -->
 <body>
