--- a/templates/download.html
+++ b/templates/download.html
@@ -11,6 +11,10 @@
 
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
 
+<head>
+   <title>Download Page</title>
+</head>
+
 <div class="showcase">
    <div class="video-container">
       <video autoplay muted loop>
