--- a/templates/error.html
+++ b/templates/error.html
@@ -2,6 +2,10 @@
 
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
 
+<head>
+   <title>Error Page</title>
+</head>
+
 <div class="showcase">
    <div class="video-container">
       <video autoplay muted loop>
