--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,10 @@
 
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
 
+<head>
+   <title>Solien Gallery</title>
+</head>
+
 <div class="showcase">
    <div class="video-container">
       <video autoplay muted loop>
