Create new connection in server

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <tr>
                <td><br><input type="text" id="wallet" placeholder="Wallet Number"></td>
                <td style="padding: 10px"></td>
-               <td><input type="submit" value="Search"></td>
+               <td><button onclick="enqueue_search()">Search</button></td>
             </tr>
          </table>
       </form>
