--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -94,6 +94,24 @@ input[type=submit]:hover {
     transform: scale(0.98);
 }
 
+button {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 100%;
+    font-weight: 60;
+    display: inline-block;
+    padding: 10px 20px;
+    background: var(--primary-color);
+    color: #fff;
+    border-radius: 1px;
+    border: solid #fff 1px;
+    margin-top: 25px;
+    opacity: 0.7;
+}
+
+button:hover {
+    transform: scale(0.98);
+}
+
 ::placeholder {
     color: #cccccc;
 }
