Add initial About section

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
    </div>
    <div class="content">
       <h1>Solien Gallery</h1>
-      <h2>A New Way To Showcase Your NFTs</h2>
+      <h3>A New Way To Showcase Your NFTs</h3>
       <center>
          <table>
             <tr>
@@ -56,4 +56,14 @@
          </table>
       </center>
    </div>
+</div>
+<div class="about">
+   <center>
+      <h2>About The Project</h2>
+      <br>
+
+      <p>This is the Solien Gallery, a project for COS 333 at Princeton University. We want to help Solien NFT owners show off their coolest Soliens with a custom Twitter banner.</p>
+      <p>Enter your wallet number above to get started.</p>
+      <br>
+   </center>
 </div>
