--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -8,7 +8,7 @@
 
 a {
     text-decoration: none;
-    color: #bbbbbb;
+    color: #d0d0d0;
 }
 
 body {
@@ -16,14 +16,29 @@ body {
     line-height: 1.5;
 }
 
+p {
+    max-width: 50ch;
+    font-weight: 200;
+    font-size: 1em;
+    line-height: 1.35;
+    margin-bottom: 15px;
+}
+
 h1 {
-    font-weight: 300;
+    font-weight: 200;
     font-size: 100px;
     line-height: 1.2;
     margin-bottom: 15px;
 }
 
 h2 {
+    font-weight: 200;
+    font-size: 50px;
+    line-height: 1.2;
+    margin-bottom: 15px;
+}
+
+h3 {
     font-weight: 60;
     font-size: 25px;
     line-height: 1.2;
@@ -74,6 +89,13 @@ h2 {
 
 .content {
    z-index: 2;
+}
+
+.about {
+    width: 100%;
+    background-color: black;
+    color: #fff;
+    padding: 50px;
 }
 
 input[type=submit] {
