--- a/static/styles/gallery_style.css
+++ b/static/styles/gallery_style.css
@@ -2,6 +2,7 @@
    --width: 1248px;
    --height: 1690px;
    --scaling-factor: 0.1;
+   --nft-factor: 0.2;
 }
 
 body { background-color: #f8f9fa; }
@@ -30,10 +31,12 @@ hr {
 ::-webkit-scrollbar-track { border-radius: 10px; }
 
 #sticky-sidebar {
-   min-width: 225px;
-   height: 100%;
-   padding: 20px;
-   display: flex;
+   height: 250px;
+   width: 100%;
+   padding: 0px;
+   z-index: 50;
+   align-items: center;
+   
 }
 
 #image-container { overflow: auto; }
@@ -41,37 +44,91 @@ hr {
 .selection-img {
    max-height: calc(var(--height) * var(--scaling-factor));
    max-width: calc(var(--width) * var(--scaling-factor));
-   margin: 10px;
-   border-radius: 5px;
+   margin-left: 10px;
+   margin-right: 10px;
+   margin-top:20px;
+  /* border-radius: 5px;*/
    transition: .95s ease;
 }
 
 .nft-img {
-   max-height: calc(var(--height) * var(--scaling-factor));
-   max-width: calc(var(--width) * var(--scaling-factor));
-   margin: 10px;
-   border-radius: 5px;
+   max-height: calc(var(--height) * var(--nft-factor));
+   max-width: calc(var(--width) * var(--nft-factor));
+   margin-left: 10px;
+   margin-right: 10px;
+  
    transition: .95s ease;
 }
 
 .selection-img:hover { opacity: 0.6; }
 
-#gallery-container {
+
+.showcase {
    height: 100vh;
-   width:100vh;
-   display: table;
-   background-image: url('https://wallpapercave.com/wp/wp2742875.jpg');
+   width: 100vw;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   text-align: center;
+   color: #fff;
+   overflow: hidden;
 }
 
-#gallery {
+.video-container {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   /* background: var(--primary-color) url('./https://traversymedia.com/downloads/cover.jpg') no-repeat center
+     center/cover;*/
+}
+
+.video-container video {
+   min-width: 100%;
+   min-height: 100%;
+   position: absolute;
+   top: 75%;
+   left: 95%;
+   transform: translate(-50%, -50%);
+   object-fit: cover;
+}
+
+.video-container:after {
+   content: '';
+   z-index: 1;
+   height: 100%;
+   width: 100%;
+   top: 0;
+   left: 0;
+   background: rgba(0, 0, 0, 0.5);
+   position: absolute;
+}
+
+.content {
+  z-index: 2;
+  height: 100%;
+   width: 100%;
+}
+#gallery-container {
    background-image: url('https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500');
    background-repeat: no-repeat;
    background-position: center;
    
-   background-size: 80vh;
-   display: table-cell;
-   vertical-align: middle;
-
+   /*top: 50%; */
+  /* bottom: 250px; */
+   
+   z-index: 1000; 
+   height: 100%;
+   width: 100%;
+   
+   padding-bottom: 20px;
+}
+#photol-list {
+vertical-align: middle;
+   
 }
 
 .button {
@@ -83,4 +140,20 @@ hr {
    text-align: center;
    display: table-cell;
    font-size: 16px;
+   z-index: 1000;
+}
+
+#nft_list{
+  align-self: center;
+  background-color: rgb(17, 15, 15);
+  z-index: 100;
+  position: relative;
+}
+#video{
+   height: 100%;
+   width: 100%;
+}
+
+.wallet{
+   height: 250px;
 }
