--- a/static/styles/gallery_style.css
+++ b/static/styles/gallery_style.css
@@ -140,7 +140,7 @@ button:hover {
 }
 
 #gallery-container {
-   background-image: url('https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500');
+   /* background-image: url('https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500'); */
    background-size: 1000px;
    background-repeat: no-repeat;
    background-position: center center;
